gcl (2.6.1-16) unstable; urgency=low

  * Fix sh syntax in debian/gcl.sh
  * init_or_load1 -> gcl_init_or_load1 in xgcl-2/sysinit.lsp

 -- Camm Maguire <camm@intech.m.enhanced.com>  Sat, 18 Oct 2003 22:24:34 -0400

gcl (2.6.1-15) unstable; urgency=low

  * Remove imod/ifloor functions in cmpaux.c and directly inline their
    fixed equivalents in gcl_cmpopt.lsp

 -- Camm Maguire <camm@enhanced.com>  Mon, 13 Oct 2003 15:04:24 +0000

gcl (2.6.1-14) unstable; urgency=low

  * generate less garbage in add-info (gcl_cmpinline.lsp), enabling
    maxima compile to complete in a finite time :-)

 -- Camm Maguire <camm@enhanced.com>  Fri, 10 Oct 2003 22:14:04 +0000

gcl (2.6.1-13) unstable; urgency=low

  * Fix compiler optimization bug in gcl_cmpopt.lsp -- missing parens
    around inliner for max and min
  * collect info structures for local functions in flet and labels
    processing (gcl_cmpflet.lsp), and pass upwards to call-local and
    call-global (gcl_cmpeval.lsp) to fix certain inlining bugs in via
    more proper operation of args-info-changed-vars (gcl_cmpinline.lsp,
    inline-args, gcl_cmplet.lsp, c2let)
  * Fix an obviou int overflow in ifloor (o/cmpaux.c), handle more
    proper fixnum/integer determination from declarations later

 -- Camm Maguire <camm@enhanced.com>  Fri, 10 Oct 2003 02:34:11 +0000

gcl (2.6.1-12) unstable; urgency=low

  * Restore mpz_to_mpz{1} in gmp_big.c, can be written by compiler
  * tk8.4 patches
  * Prevent destructive modification of bignum arguments in log_op/mp_op
    in gmp_big.c
  * Make sure to push stack variables onto newly allocated C variable
    when inlining args and args cause side effects, in inline-args,
    gcl_cmpinline.lsp
  * Fix bug related to gcc-3.3 fixes in set_exponent in num_co.c
  * Remove pcl_methods.c patch. as is apparently no longer needed, TODO
    -- make sure VOL modifier is inserted where needed to prevent
    longjmp clobbers

 -- Camm Maguire <camm@enhanced.com>  Thu,  2 Oct 2003 14:26:43 +0000
